# ai_assisted_it_support_concept

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_github.ps1
configs/: model_downloads.json
data/: source_registry.json
notebooks/: 001_source_inventory_and_safety_audit.ipynb  002_source_specific_preprocessing_gate.ipynb  003_normalized_candidate_sets.ipynb  004_candidate_loader_and_eval_splits.ipynb  005_rule_based_triage_safety_baseline.ipynb  006_retrieval_backbone_smoke_test.ipynb  007_nonself_retrieval_eval_fixture.ipynb  008_nonself_retrieval_bge_dev_eval.ipynb  009_embedding_challenger_qwen3_retrieval_eval.ipynb  00_data_acquisition.ipynb  010_retrieval_complementarity_analysis.ipynb  011_classification_ladder_baselines.ipynb  012_classification_ladder_error_review.ipynb  013_model_workbench_start.ipynb  014_llm_json_classifier_dry_contract.ipynb  015_llm_json_response_evaluator_gate.ipynb
scripts/: acquire_broad_data_wave.py  acquire_stackexchange_slice.py  analyze_classification_ladder_errors.py  analyze_retrieval_complementarity.py  audit_model_workbench_readiness.py  build_candidate_eval_splits.py  build_nonself_retrieval_eval_fixture.py  build_normalized_candidate_sets.py  download_models.py  evaluate_classification_ladder_baselines.py  evaluate_embedding_classifier_baseline.py  evaluate_llm_json_classifier_responses.py  evaluate_nonself_retrieval_bge.py  evaluate_rule_based_triage_safety.py  prepare_llm_json_classifier_dry_run.py  review_rule_based_safety_false_negatives.py  run_local_llm_json_classifier_smoke.py  (+2 more)
(+31 files in other folders)
