[project]
name = "it-support-ai"
version = "0.1.0"
description = "Local-first proof-of-concept SLM pipeline for IT support triage and grounded troubleshooting."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
